--- a/test2.html
+++ b/test2.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Geochart GeoJSON example page</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBii70ehTV7SGgZ2FZLPXFAVLvPuzxWss4"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=INSERT API KEY"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/rarylson/geochart-geojson/master/build/geochart-geojson.min.js"></script>
 
     <script type="text/javascript">
